plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'checkstyle'
}

group = 'com.mucompany'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation "com.google.guava:guava:32.0.1-jre"
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2:1.4.199'
    implementation group: 'org.redisson', name: 'redisson-spring-boot-starter', version: '3.22.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('setGithooks', Exec) {
    commandLine 'git', 'config', 'core.hooksPath', '.githooks'
}

['bootRun', 'build', 'test'].each { taskName ->
    tasks.named(taskName) {
        dependsOn 'setGithooks'
    }
}

apply from: "$rootDir/gradle/checkstyle.gradle"
